--- a/admin.shop.com/Application/Admin/View/Supplier/index.html
+++ b/admin.shop.com/Application/Admin/View/Supplier/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ECSHOP 管理中心 - 商品品牌 </title>
+<title>ECSHOP 管理中心</title>
 <meta name="robots" content="noindex, nofollow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="__CSS__/general.css" rel="stylesheet" type="text/css" />
@@ -12,11 +12,11 @@
 <h1>
     <span class="action-span"><a href="{:U('add')}">添加供货商</a></span>
     <span class="action-span1"><a href="#">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 商品品牌 </span>
+    <span id="search_id" class="action-span1"> - 供货商管理 </span>
     <div style="clear:both"></div>
 </h1>
 <div class="form-div">
-    <form action="" name="searchForm">
+    <form action="{U:()}" name="searchForm">
     <img src="__IMG__/icon_search.gif" width="26" height="22" border="0" alt="search" />
     <input type="text" name="name" size="15" value="{:I('get.name')}" />
     <input type="submit" value=" 搜索 " class="button" />
@@ -50,21 +50,6 @@
             </foreach>
             <tr>
                 <td align="right" nowrap="true" colspan="6" >
-                    <!--<div id="turn-page">-->
-                        <!--总计 <span id="totalRecords">11</span>-->
-                        <!--个记录分为 <span id="totalPages">1</span>-->
-                        <!--页当前第 <span id="pageCurrent">1</span>-->
-                        <!--页，每页 <input type='text' size='3' id='pageSize' value="15" />-->
-                        <!--<span id="page-link">-->
-                            <!--<a href="#">第一页</a>-->
-                            <!--<a href="#">上一页</a>-->
-                            <!--<a href="#">下一页</a>-->
-                            <!--<a href="#">最末页</a>-->
-                            <!--<select id="gotoPage">-->
-                                <!--<option value='1'>1</option>-->
-                            <!--</select>-->
-                        <!--</span>-->
-                    <!--</div>-->
                     <div class="digg">
                         {$html}
                     </div>
