--- a/admin.shop.com/Application/Admin/View/Brand/index.html
+++ b/admin.shop.com/Application/Admin/View/Brand/index.html
@@ -12,7 +12,7 @@
 <h1>
     <span class="action-span"><a href="{:U('add')}">添加供货商</a></span>
     <span class="action-span1"><a href="#">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 供货商管理 </span>
+    <span id="search_id" class="action-span1"> - 品牌管理 </span>
     <div style="clear:both"></div>
 </h1>
 <div class="form-div">
@@ -50,8 +50,9 @@
             </foreach>
             <tr>
                 <td align="right" nowrap="true" colspan="6" >
-                    <div class="digg">
+                    <div class="scott">
                         {$html}
+                        <!--<a href="{:U('index','p='.$num)}">最后页</a>-->
                     </div>
 
                 </td>
