--- a/admin.shop.com/Application/Admin/View/ArticleCategory/index.html
+++ b/admin.shop.com/Application/Admin/View/ArticleCategory/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 <h1>
-    <span class="action-span"><a href="{:U('add')}">添加供货商</a></span>
+    <span class="action-span"><a href="{:U('add')}">添加文章分类</a></span>
     <span class="action-span1"><a href="#">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 供货商管理 </span>
+    <span id="search_id" class="action-span1"> - 文章分类 </span>
     <div style="clear:both"></div>
 </h1>
 <div class="form-div">
-    <form action="{:U()}" name="searchForm">
+    <form action="{:U()}" name="n">
     <img src="__IMG__/icon_search.gif" width="26" height="22" border="0" alt="search" />
     <input type="text" name="name" size="15" value="{:I('get.name')}" />
     <input type="submit" value=" 搜索 " class="button" />
@@ -26,19 +26,25 @@
     <div class="list-div" id="listDiv">
         <table cellpadding="3" cellspacing="1">
             <tr>
-                <th>供货商</th>
-                <th>介绍</th>
-                <th>排序</th>
+                <th>分类名称</th>
+                <th>分类介绍</th>
                 <th>是否显示</th>
+                <th>排序</th>
+                <th>是否是帮助类文档</th>
                 <th>操作</th>
             </tr>
             <foreach name="rows" item="row">
                 <tr>
                     <td class="first-cell">{$row.name}</td>
                     <td align="center">{$row.intro}</td>
-                    <td align="center">{$row.sort}</td>
                     <td align="center">
                         <if condition="$row.status eq 1"><img src="__IMG__/yes.gif" />
+                            <else /><img src="__IMG__/no.gif" />
+                        </if>
+                    </td>
+                    <td align="center">{$row.sort}</td>
+                    <td align="center">
+                        <if condition="$row.is_help eq 1"><img src="__IMG__/yes.gif" />
                             <else /><img src="__IMG__/no.gif" />
                         </if>
                     </td>
