--- a/admin.shop.com/Application/Admin/View/Brand/add.html
+++ b/admin.shop.com/Application/Admin/View/Brand/add.html
@@ -12,20 +12,20 @@
 <h1>
     <span class="action-span"><a href="__GROUP__/Category/categoryList">商品分类</a></span>
     <span class="action-span1"><a href="__GROUP__">ECSHOP 管理中心</a></span>
-    <span id="search_id" class="action-span1"> - 添加供货商 </span>
+    <span id="search_id" class="action-span1"> - 添加品牌 </span>
     <div style="clear:both"></div>
 </h1>
 <div class="main-div">
     <form action="{:U()}" method="post" name="theForm" enctype="multipart/form-data">
         <table width="100%" id="general-table">
             <tr>
-                <td class="label">供应商名称:</td>
+                <td class="label">品牌名称:</td>
                 <td>
                     <input type='text' name='name' maxlength="20" value='{$name}' size='27' /> <font color="red">*</font>
                 </td>
             </tr>
             <tr>
-                <td class="label">供货商描述:</td>
+                <td class="label">品牌描述:</td>
                 <td>
                     <input type='text' name='intro' maxlength="20" value='{$intro}' size='27' />
                 </td>
